# spec/api.yml
@@ -34,6 +34,30 @@ paths:
                   message:
                     type: string
                     example: Internal Server Error
+
+  /auth/login:
+    post:
+      tags:
+        - Auth
+      summary: Store credentials
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthRequest'
+      responses:
+        '200':
+          description: User details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '401':
+          description: Auth failed
+        '500':
+          description: Internal server error
+
   /nodes/ping:
     get:
       tags:
@@ -61,13 +85,13 @@ paths:
     post:
       tags:
         - Node
-      summary: Send node  status
+      summary: Send node status
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Node'
       responses:
         '200':
           description: Ping response from the node
@@ -300,8 +324,6 @@ components:
           minLength: 1
         description:
           type: string
-        publicKey:
-          type: string
         followers_num:
           type: integer
           format: int64
@@ -342,6 +364,8 @@ components:
         user_id:
           type: string
           minLength: 1
+        username:
+          type: string
         tweet_id:
           type: string
           minLength: 1
@@ -500,3 +524,14 @@ components:
       required:
         - cursor
         - tweets
+
+    AuthRequest:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+      required:
+        - username
+        - password
